[project]
name = "orch8-sdk"
version = "0.1.0"
description = "Python SDK for Orch8 workflow engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orch8"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
