[project]
name = "orch8-io-sdk"
version = "0.1.0"
description = "Python SDK for Orch8 workflow engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Orch8 Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["orch8", "workflow", "sdk"]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.urls]
Homepage = "https://orch8.io"
Repository = "https://github.com/orch8-io/sdk-python"
Issues = "https://github.com/orch8-io/sdk-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orch8"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
